adding user follow custom cell & fixing issues

--- a/Instagram Clone/Views/Storyboards/General.storyboard
+++ b/Instagram Clone/Views/Storyboards/General.storyboard
@@ -161,9 +161,36 @@
                     <view key="view" contentMode="scaleToFill" id="BaT-aP-4aI">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="iFM-Pk-eZo">
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <subviews>
+                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="6hS-6n-oNb">
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="818"/>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                    </tableView>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstItem="6hS-6n-oNb" firstAttribute="top" secondItem="iFM-Pk-eZo" secondAttribute="top" id="MXS-dL-8vK"/>
+                                    <constraint firstAttribute="trailing" secondItem="6hS-6n-oNb" secondAttribute="trailing" id="Sez-Cg-0ok"/>
+                                    <constraint firstAttribute="bottom" secondItem="6hS-6n-oNb" secondAttribute="bottom" id="aIZ-gM-rRU"/>
+                                    <constraint firstItem="6hS-6n-oNb" firstAttribute="leading" secondItem="iFM-Pk-eZo" secondAttribute="leading" id="xZ4-5v-9e9"/>
+                                </constraints>
+                            </view>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="gO0-Or-0Mo"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="iFM-Pk-eZo" firstAttribute="leading" secondItem="gO0-Or-0Mo" secondAttribute="leading" id="BWB-7h-b9H"/>
+                            <constraint firstItem="gO0-Or-0Mo" firstAttribute="trailing" secondItem="iFM-Pk-eZo" secondAttribute="trailing" id="E4E-zL-fxK"/>
+                            <constraint firstItem="gO0-Or-0Mo" firstAttribute="bottom" secondItem="iFM-Pk-eZo" secondAttribute="bottom" id="TFw-yt-K7H"/>
+                            <constraint firstItem="iFM-Pk-eZo" firstAttribute="top" secondItem="gO0-Or-0Mo" secondAttribute="top" id="uxm-3d-Bql"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="tableview" destination="6hS-6n-oNb" id="ETw-Vh-odl"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qtq-ir-22R" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
