--- a/Instagram Clone/Views/NotificationsCustomViews/NotificationLikeEventCell.xib
+++ b/Instagram Clone/Views/NotificationsCustomViews/NotificationLikeEventCell.xib
@@ -20,27 +20,27 @@
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5Od-HI-XWA">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="goku_ultra_instinct" translatesAutoresizingMaskIntoConstraints="NO" id="dJe-Ss-rce">
-                                <rect key="frame" x="15" y="5" width="70" height="34"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="placeholder-profile-male" translatesAutoresizingMaskIntoConstraints="NO" id="dJe-Ss-rce">
+                                <rect key="frame" x="15" y="5" width="45" height="34"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="70" id="vh4-1V-UWd"/>
+                                    <constraint firstAttribute="width" constant="45" id="vh4-1V-UWd"/>
                                 </constraints>
                             </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="e9m-G7-Sa5">
-                                <rect key="frame" x="95" y="15" width="165" height="14.5"/>
+                                <rect key="frame" x="70" y="15" width="185" height="14.5"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="username liked your post" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Azv-p8-AHi">
-                                        <rect key="frame" x="0.0" y="0.0" width="165" height="14.5"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="liked your post" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Azv-p8-AHi">
+                                        <rect key="frame" x="0.0" y="0.0" width="185" height="14.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
                             </stackView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="xrg-aa-ieJ">
-                                <rect key="frame" x="265" y="5" width="40" height="34"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="goku_ultra_instinct" translatesAutoresizingMaskIntoConstraints="NO" id="xrg-aa-ieJ">
+                                <rect key="frame" x="260" y="5" width="45" height="34"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="40" id="DKV-ip-wlP"/>
+                                    <constraint firstAttribute="width" constant="45" id="DKV-ip-wlP"/>
                                 </constraints>
                             </imageView>
                         </subviews>
@@ -75,5 +75,6 @@
     </objects>
     <resources>
         <image name="goku_ultra_instinct" width="960" height="600"/>
+        <image name="placeholder-profile-male" width="370" height="422"/>
     </resources>
 </document>
