--- a/Instagram Clone/Views/HomeCustomCells & Post/IgFeedPostActionsCell.xib
+++ b/Instagram Clone/Views/HomeCustomCells & Post/IgFeedPostActionsCell.xib
@@ -5,6 +5,7 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -16,9 +17,26 @@
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                 <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JtX-8K-G1i">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <color key="backgroundColor" systemColor="systemPurpleColor"/>
+                    </view>
+                </subviews>
+                <constraints>
+                    <constraint firstItem="JtX-8K-G1i" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="Adb-gG-TXP"/>
+                    <constraint firstAttribute="trailing" secondItem="JtX-8K-G1i" secondAttribute="trailing" id="Sss-zb-gvD"/>
+                    <constraint firstAttribute="bottom" secondItem="JtX-8K-G1i" secondAttribute="bottom" id="cKd-dp-89h"/>
+                    <constraint firstItem="JtX-8K-G1i" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="kte-ef-biq"/>
+                </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <point key="canvasLocation" x="81" y="35"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <systemColor name="systemPurpleColor">
+            <color red="0.68627450980392157" green="0.32156862745098042" blue="0.87058823529411766" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+    </resources>
 </document>
