--- a/Instagram Clone/Views/HomeCustomCells & Post/IgFeedPostCell.xib
+++ b/Instagram Clone/Views/HomeCustomCells & Post/IgFeedPostCell.xib
@@ -5,6 +5,7 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -16,9 +17,26 @@
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                 <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="EA5-gQ-QiC">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <color key="backgroundColor" systemColor="systemPinkColor"/>
+                    </view>
+                </subviews>
+                <constraints>
+                    <constraint firstAttribute="bottom" secondItem="EA5-gQ-QiC" secondAttribute="bottom" id="Fji-em-haO"/>
+                    <constraint firstItem="EA5-gQ-QiC" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="MFv-Xe-EI8"/>
+                    <constraint firstItem="EA5-gQ-QiC" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="Nvu-Yq-zOg"/>
+                    <constraint firstAttribute="trailing" secondItem="EA5-gQ-QiC" secondAttribute="trailing" id="Pvb-RJ-a8K"/>
+                </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <point key="canvasLocation" x="74" y="73"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <systemColor name="systemPinkColor">
+            <color red="1" green="0.17647058823529413" blue="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+    </resources>
 </document>
