--- a/Instagram Clone/Views/HomeCustomCells & Post/IgFeedPostGeneralCell.xib
+++ b/Instagram Clone/Views/HomeCustomCells & Post/IgFeedPostGeneralCell.xib
@@ -5,20 +5,38 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="IgFeedPostGeneralCell" id="KGk-i7-Jjw" customClass="IgFeedPostGeneralCell" customModule="Instagram_Clone" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="IgFeedPostGeneralCell" rowHeight="112" id="KGk-i7-Jjw" customClass="IgFeedPostGeneralCell" customModule="Instagram_Clone" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="112"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="112"/>
                 <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Wb8-oa-bzt">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="112"/>
+                        <color key="backgroundColor" systemColor="systemYellowColor"/>
+                    </view>
+                </subviews>
+                <constraints>
+                    <constraint firstAttribute="trailing" secondItem="Wb8-oa-bzt" secondAttribute="trailing" id="35y-J2-eUN"/>
+                    <constraint firstItem="Wb8-oa-bzt" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="HHv-XQ-x6E"/>
+                    <constraint firstItem="Wb8-oa-bzt" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="V70-GO-UoI"/>
+                    <constraint firstAttribute="bottom" secondItem="Wb8-oa-bzt" secondAttribute="bottom" id="bg6-FP-ElG"/>
+                </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
-            <point key="canvasLocation" x="81" y="35"/>
+            <point key="canvasLocation" x="79.710144927536234" y="57.589285714285708"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <systemColor name="systemYellowColor">
+            <color red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+    </resources>
 </document>
