--- a/Instagram Clone/Views/HomeCustomCells & Post/IgFeedPostHeaderCell.xib
+++ b/Instagram Clone/Views/HomeCustomCells & Post/IgFeedPostHeaderCell.xib
@@ -5,6 +5,7 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -16,9 +17,26 @@
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                 <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="K3t-GF-Fnh">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <color key="backgroundColor" systemColor="systemBlueColor"/>
+                    </view>
+                </subviews>
+                <constraints>
+                    <constraint firstAttribute="trailing" secondItem="K3t-GF-Fnh" secondAttribute="trailing" id="Knl-NC-HE7"/>
+                    <constraint firstAttribute="bottom" secondItem="K3t-GF-Fnh" secondAttribute="bottom" id="Pkl-oZ-sAq"/>
+                    <constraint firstItem="K3t-GF-Fnh" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="cAs-mh-Uvc"/>
+                    <constraint firstItem="K3t-GF-Fnh" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="dMF-eX-wMt"/>
+                </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <point key="canvasLocation" x="81" y="35"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <systemColor name="systemBlueColor">
+            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+    </resources>
 </document>
