--- a/Instagram Clone/Views/HomeCustomCells & Post/IgFeedPostCell.xib
+++ b/Instagram Clone/Views/HomeCustomCells & Post/IgFeedPostCell.xib
@@ -5,22 +5,31 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="IgFeedPostCell" id="KGk-i7-Jjw" customClass="IgFeedPostCell" customModule="Instagram_Clone" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="IgFeedPostCell" rowHeight="109" id="KGk-i7-Jjw" customClass="IgFeedPostCell" customModule="Instagram_Clone" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="109"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="109"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="EA5-gQ-QiC">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
-                        <color key="backgroundColor" systemColor="systemPinkColor"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="109"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="3ah-mz-zuJ">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="109"/>
+                            </imageView>
+                        </subviews>
+                        <constraints>
+                            <constraint firstItem="3ah-mz-zuJ" firstAttribute="leading" secondItem="EA5-gQ-QiC" secondAttribute="leading" id="1fM-WK-ZhM"/>
+                            <constraint firstAttribute="bottom" secondItem="3ah-mz-zuJ" secondAttribute="bottom" id="ZO4-kt-sUe"/>
+                            <constraint firstItem="3ah-mz-zuJ" firstAttribute="top" secondItem="EA5-gQ-QiC" secondAttribute="top" id="ZSi-Hc-l6I"/>
+                            <constraint firstAttribute="trailing" secondItem="3ah-mz-zuJ" secondAttribute="trailing" id="hCq-c1-SjN"/>
+                        </constraints>
                     </view>
                 </subviews>
                 <constraints>
@@ -31,12 +40,11 @@
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
-            <point key="canvasLocation" x="74" y="73"/>
+            <connections>
+                <outlet property="img" destination="3ah-mz-zuJ" id="2Yd-em-Png"/>
+                <outlet property="mainView" destination="EA5-gQ-QiC" id="Qbz-VR-nJ5"/>
+            </connections>
+            <point key="canvasLocation" x="73.913043478260875" y="94.754464285714278"/>
         </tableViewCell>
     </objects>
-    <resources>
-        <systemColor name="systemPinkColor">
-            <color red="1" green="0.17647058823529413" blue="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
-    </resources>
 </document>
