--- a/Instagram Clone/Views/HomeCustomCells & Post/IgFeedPostHeaderCell.xib
+++ b/Instagram Clone/Views/HomeCustomCells & Post/IgFeedPostHeaderCell.xib
@@ -5,7 +5,6 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -20,7 +19,42 @@
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="K3t-GF-Fnh">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
-                        <color key="backgroundColor" systemColor="systemBlueColor"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Ayp-q0-dn3">
+                                <rect key="frame" x="5" y="5" width="40" height="34"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="40" id="Jim-cd-Zsq"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wrh-lN-7r7">
+                                <rect key="frame" x="55" y="13.5" width="225" height="17"/>
+                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="14"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iHG-Vy-bIk">
+                                <rect key="frame" x="290" y="11" width="25" height="22"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="25" id="uGS-Y1-PhO"/>
+                                </constraints>
+                                <color key="tintColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <state key="normal" image="ellipsis" catalog="system"/>
+                                <connections>
+                                    <action selector="moreAction:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="mdS-QZ-4xh"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <constraints>
+                            <constraint firstItem="wrh-lN-7r7" firstAttribute="centerY" secondItem="K3t-GF-Fnh" secondAttribute="centerY" id="242-ua-sEh"/>
+                            <constraint firstItem="Ayp-q0-dn3" firstAttribute="leading" secondItem="K3t-GF-Fnh" secondAttribute="leading" constant="5" id="86a-aT-9Ru"/>
+                            <constraint firstAttribute="bottom" secondItem="Ayp-q0-dn3" secondAttribute="bottom" constant="5" id="Ghm-qM-fGy"/>
+                            <constraint firstItem="Ayp-q0-dn3" firstAttribute="top" secondItem="K3t-GF-Fnh" secondAttribute="top" constant="5" id="HET-PZ-EU9"/>
+                            <constraint firstItem="iHG-Vy-bIk" firstAttribute="centerY" secondItem="K3t-GF-Fnh" secondAttribute="centerY" id="Rga-kC-5ws"/>
+                            <constraint firstItem="iHG-Vy-bIk" firstAttribute="leading" secondItem="wrh-lN-7r7" secondAttribute="trailing" constant="10" id="elb-Rm-tiq"/>
+                            <constraint firstItem="wrh-lN-7r7" firstAttribute="leading" secondItem="Ayp-q0-dn3" secondAttribute="trailing" constant="10" id="khv-o6-9lf"/>
+                            <constraint firstAttribute="trailing" secondItem="iHG-Vy-bIk" secondAttribute="trailing" constant="5" id="mS2-iH-BO0"/>
+                            <constraint firstItem="Ayp-q0-dn3" firstAttribute="centerY" secondItem="K3t-GF-Fnh" secondAttribute="centerY" id="ztn-F3-Y2G"/>
+                        </constraints>
                     </view>
                 </subviews>
                 <constraints>
@@ -31,12 +65,15 @@
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <connections>
+                <outlet property="img" destination="Ayp-q0-dn3" id="Wwv-4t-MTy"/>
+                <outlet property="moreBtn" destination="iHG-Vy-bIk" id="Gxc-vU-CXL"/>
+                <outlet property="usernameLbl" destination="wrh-lN-7r7" id="3wl-0r-X4a"/>
+            </connections>
             <point key="canvasLocation" x="81" y="35"/>
         </tableViewCell>
     </objects>
     <resources>
-        <systemColor name="systemBlueColor">
-            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
+        <image name="ellipsis" catalog="system" width="128" height="37"/>
     </resources>
 </document>
