--- a/Instagram Clone/Views/HomeCustomCells & Post/IgFeedPostActionsCell.xib
+++ b/Instagram Clone/Views/HomeCustomCells & Post/IgFeedPostActionsCell.xib
@@ -10,45 +10,51 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="IgFeedPostActionsCell" id="KGk-i7-Jjw" customClass="IgFeedPostActionsCell" customModule="Instagram_Clone" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="IgFeedPostActionsCell" rowHeight="39" id="KGk-i7-Jjw" customClass="IgFeedPostActionsCell" customModule="Instagram_Clone" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="39"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="39"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JtX-8K-G1i">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="39"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BTl-ot-mh0">
-                                <rect key="frame" x="5" y="5" width="35" height="34"/>
+                                <rect key="frame" x="5" y="5" width="45" height="29"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="35" id="yOx-gg-wNF"/>
+                                    <constraint firstAttribute="width" constant="45" id="yOx-gg-wNF"/>
                                 </constraints>
                                 <color key="tintColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <state key="normal" image="heart" catalog="system"/>
+                                <state key="normal" image="heart" catalog="system">
+                                    <preferredSymbolConfiguration key="preferredSymbolConfiguration" configurationType="pointSize" pointSize="22" weight="regular"/>
+                                </state>
                                 <connections>
                                     <action selector="likeAction:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="0Rs-qi-YWR"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="M3U-qY-HKf">
-                                <rect key="frame" x="40" y="5" width="35" height="34"/>
+                                <rect key="frame" x="50" y="5" width="45" height="29"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="35" id="KqU-xy-bGW"/>
+                                    <constraint firstAttribute="width" constant="45" id="KqU-xy-bGW"/>
                                 </constraints>
                                 <color key="tintColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <state key="normal" image="message" catalog="system"/>
+                                <state key="normal" image="message" catalog="system">
+                                    <preferredSymbolConfiguration key="preferredSymbolConfiguration" configurationType="pointSize" pointSize="22" weight="regular"/>
+                                </state>
                                 <connections>
                                     <action selector="commentAction:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="pLm-Lt-X7D"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sfS-6F-IUJ">
-                                <rect key="frame" x="75" y="5" width="35" height="34"/>
+                                <rect key="frame" x="95" y="5" width="45" height="29"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="35" id="eSQ-j5-7Cs"/>
+                                    <constraint firstAttribute="width" constant="45" id="eSQ-j5-7Cs"/>
                                 </constraints>
                                 <color key="tintColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <state key="normal" image="paperplane" catalog="system"/>
+                                <state key="normal" image="paperplane" catalog="system">
+                                    <preferredSymbolConfiguration key="preferredSymbolConfiguration" configurationType="pointSize" pointSize="22" weight="regular"/>
+                                </state>
                                 <connections>
                                     <action selector="sendAction:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="hVl-eP-l1E"/>
                                 </connections>
@@ -80,7 +86,7 @@
                 <outlet property="likeBtn" destination="BTl-ot-mh0" id="JCg-Vf-wkO"/>
                 <outlet property="sendBtn" destination="sfS-6F-IUJ" id="1wX-p6-4xl"/>
             </connections>
-            <point key="canvasLocation" x="81" y="35"/>
+            <point key="canvasLocation" x="79.710144927536234" y="-16.40625"/>
         </tableViewCell>
     </objects>
     <resources>
